@@ -1,0 +1,8 @@
+[[!comment format=mdwn
+ username="joey"
+ subject="""comment 1"""
+ date="2016-03-29T18:35:26Z"
+ content="""
+I don't think that's a good default, but I will add the time zone to the
+date displayed. And add a --raw-date option for epoch.
+"""]]
